fix stripe validation errors not showing

--- a/static/css/global-styles.css
+++ b/static/css/global-styles.css
@@ -96,7 +96,8 @@ section hr {
   border-color: #523adf;
 }
 
-.btn-primary.disabled {
+.btn-primary.disabled,
+.btn-primary:disabled {
   background-color: #6e5eff;
   border-color: #6e5eff;
 }
